Correction - overflow x

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -43,6 +43,7 @@
 html {
     scroll-behavior: smooth;
     background-color: #08090B;
+    overflow-x: hidden;
 }
 
 * {
@@ -748,7 +749,6 @@ footer {
 @media (max-width: 440px) {
     #presentation-box h1 {
         font-size: 2.3rem;
-        width: 100%;
     }
     #presentation-box-buttons {
         bottom: 50px;
